syntax = "proto3";

package kessel.inventory.v1beta1;

import "google/api/annotations.proto";

import "kessel/inventory/v1beta1/policy.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1";

message CreatePolicyRequest {
  // The policy to create in Kessel Asset Inventory
  Policy policy = 1;
}

message CreatePolicyResponse {
  // The policy created in Kessel Asset Inventory
  Policy policy = 1;
}

message UpdatePolicyRequest {
  // The {resource} format
  // \"<reporter_data.reporter_type>:<reporter_data.local_resource_id>\".
  string resource = 1;
  // The Policy to update in Kessel Asset Inventory
  Policy policy = 2;
}

message UpdatePolicyResponse {}

message DeletePolicyRequest {
  // The {resource} format
  // \"<reporter_data.reporter_type>:<reporter_data.local_resource_id>\".
  string resource = 1;
}

message DeletePolicyResponse {}

service KesselPolicyService {
  rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse) {
    option (google.api.http) = {
      post : "/api/inventory/v1beta1/policies"
      body : "*"
    };
  };

  rpc UpdatePolicy(UpdatePolicyRequest) returns (UpdatePolicyResponse) {
    option (google.api.http) = {
      put : "/api/inventory/v1beta1/policies/{resource}"
      body : "*"
    };
  };

  rpc DeletePolicy(DeletePolicyRequest) returns (DeletePolicyResponse) {
    option (google.api.http) = {
      delete : "/api/inventory/v1beta1/policies/{resource}"
    };
  };
}
